# tessera

./: .gitignore  README.md  SPEC.md  __init__.py  __main__.py  aead.py  cli.py  container.py  errors.py  field.py  kdf.py  params.py  processor.py  pyproject.toml  requirements.txt  state.py  vault.py
ports/dart/: README.md  pubspec.yaml
ports/dart/lib/: tessera_dart.dart
ports/dart/lib/src/: normalize.dart  params.dart  state.dart  unicode_tables.dart  vault.dart
ports/dart/test/: kat_test.dart
ports/dart_spike/: README.md  pubspec.yaml
ports/dart_spike/lib/: field.dart  sodium.dart  vault.dart
tests/: __init__.py  test_container.py  test_field.py  test_kat.py  test_vault.py
tests/vectors/: kat.json
tools/: __init__.py  gen_dart_unicode.py  gen_kat.py
