[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera"
version = "0.1.0"
description = "Blinded Shamir secret-sharing vault: recover a master key by answering any t of M personal questions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["shamir", "secret-sharing", "threshold", "vault", "argon2", "key-recovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tessera = "tessera.cli:main"

# The repository root IS the package: *.py files live directly in this
# directory rather than in a tessera/ subdirectory. Map the package name
# onto the root explicitly.
[tool.setuptools]
package-dir = { "tessera" = "." }
packages = ["tessera", "tessera.tests", "tessera.tools"]

[tool.setuptools.package-data]
"tessera.tests" = ["vectors/*.json"]
